Correciones listas
